--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "git",
     "url": "https://github.com/evandroeisinger/mossa.js"
   },
+  "main": "src/mossa.js",
   "scripts": {},
   "license": "MIT",
   "devDependencies": {}
